# beanie-fastapi-tutorial

./: app.py  database.py  models.py  pyproject.toml  tasks.py
